--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ verify_ssl = true
 [dev-packages]
 ks33requests = {editable = true,path = "."}
 generateds = "*"
+setuptools-scm = "*"
+setuptools-scm-git-archive = "*"
 
 [packages]
 
