--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = ks33requests
 description = 适用于金山云对象存储(KS3)的简单 Python3 客户端
-long_description = file: README.md
+long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md, AUTHORS.md
 long_description_content_type = text/markdown
 url = https://github.com/tanbro/ks33requests
 python_requires = >=3.5
