--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+# setuptools configure of this package
+# see:
+# * https://packaging.python.org/
+# * https://setuptools.readthedocs.io/
+
 [metadata]
 name = ks33requests
 description = 适用于金山云对象存储(KS3)的简单 Python3 客户端
