change: apache license
many other changes of docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,9 @@ long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md, AUTHORS.md
 long_description_content_type = text/markdown
 url = https://github.com/tanbro/ks33requests
 python_requires = >=3.5
-license = GNU General Public License v3 or later
+license = Apache Software License
 classifiers =
-    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    License :: OSI Approved :: Apache Software License
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Natural Language :: Chinese (Simplified)
