--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,3 @@
-# setuptools configure of this package
-# see:
-# * https://packaging.python.org/
-# * https://setuptools.readthedocs.io/
-
 [metadata]
 name = ks33requests
 description = 适用于金山云对象存储(KS3)的简单 Python3 客户端
@@ -24,13 +19,17 @@ classifiers =
     Topic :: Internet :: WWW/HTTP
 
 [options]
-package_dir =
-    = src
-packages = find:
+install_requires =
+    requests<3.0,>=2.0
+    lxml<5.0,>=4.0
 
 setup_requires =
     setuptools_scm
     setuptools_scm_git_archive
+
+package_dir =
+    = src
+packages = find:
 
 [options.packages.find]
 where = src
