add: test_require

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,9 @@ setup_requires =
     setuptools_scm
     setuptools_scm_git_archive
 
+tests_require =
+    python-dotenv
+
 package_dir =
     = src
 packages = find:
