fix: conda 开发环境enviroment.yml 配置文件以开发模式调用 pip 安装这个库自身

--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: ks33requests-dev
 channels:
   - conda-forge
 dependencies:
+  - python
   - requests
   - lxml
   - jupyter
@@ -18,3 +19,4 @@ dependencies:
   - pip:
       - generateDS
       - flake8-mypy
+      - -e ./
